# 3DGaussianSplatGL

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  fullscreen.html  hello_world.html  hello_world.js
assets/wasm/: index.html
cmake/: Common.cmake  FindGlad.cmake  FindImGui.cmake  FindImGuizmo.cmake  FindStb.cmake
lib/: CMakeLists.txt
src/: Application.cpp  Application.hpp  MyApplication.cpp  MyApplication.hpp  Shader.cpp  Shader.hpp  Sort.h  Texture.cpp  Texture.h  dataset.cpp  dataset.h  glError.cpp  glError.hpp  logging.h  main.cpp  ply.cpp  ply.h  splatBuffer.cpp  splatBuffer.h  splatTree.cpp  splatTree.h  splatTreeNode.h  texture.h  tracing.h
src/app/: CMakeLists.txt  Main.cpp  app.cpp  app.h  gaussiancloud.cpp  gaussiancloud.h  ply.cpp  ply.h  pointcloud.cpp  pointcloud.h  splatrenderer.cpp  splatrenderer.h
src/runtime/: CMakeLists.txt
src/runtime/core/: Components.hpp  Core.hpp  Datatypes.hpp  Defines.hpp  Logger.hpp  Math.hpp  Time.cpp  Time.hpp  Traits.hpp  util.cpp  util.h
src/runtime/core/ecs/: Database.cpp  Database.hpp  EntityId.hpp  Query.cpp  Query.hpp  Scheduler.cpp  Scheduler.hpp  SparseIndex.cpp  SparseIndex.hpp  SparseSet.hpp  System.cpp  System.hpp  Table.hpp
src/runtime/core/scheduler/: Job.hpp  Scheduler.cpp  Scheduler.hpp  Worker.cpp  Worker.hpp
src/runtime/editor/: Components.hpp  EditorSystem.cpp  EditorSystem.hpp
src/runtime/render/: Components.hpp  Id.hpp  Raycast.cpp  Raycast.hpp  RenderSystem.cpp  RenderSystem.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/runtime/render/components/: AABB.cpp  AABB.hpp  Mesh.cpp  Mesh.hpp  OBB.cpp  OBB.hpp
src/runtime/render/shaders/: fragment.frag  fragment_tex.frag  vertex.vert  vertex_pos.vert
src/runtime/scene/: CameraController.cpp  CameraController.hpp  CameraSystem.cpp  CameraSystem.hpp  Components.hpp  Scene.cpp  Scene.hpp  TransformSystem.cpp  TransformSystem.hpp
src/runtime/scene/components/: Camera.cpp  Camera.hpp  CameraControl.hpp  Transform.hpp
src/runtime/ui/: FrameInput.cpp  FrameInput.hpp  ImGui.cpp  ImGui.hpp  InputBindings.cpp  InputBindings.hpp  InputListener.hpp  InputSystem.cpp  InputSystem.hpp  Window.cpp  Window.hpp
